series detail cover image stretch fix
- Fixes: Fixes series detail cover image being stretched on larger resolutions

--- a/UI/Web/src/app/series-detail/series-detail.component.scss
+++ b/UI/Web/src/app/series-detail/series-detail.component.scss
@@ -32,3 +32,7 @@
   word-break: break-all;
   margin-bottom: 0;
 }
+
+.image-container {
+  max-height: 400px;
+}
